# Edge_Detection_Viewer

./: .gitignore  README.md  build-android.bat  build-android.sh  build-web.bat  clean-gradle-cache.bat  gradle.properties
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/flamapp/edgedetection/: MainActivity.kt
app/src/main/java/com/flamapp/edgedetection/gl/: GLRenderer.kt
app/src/main/java/com/flamapp/edgedetection/jni/: NativeProcessor.kt
app/src/main/jni/: CMakeLists.txt  gl_utils.cpp  native_processor.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml
docs/screenshots/: README.md
web/: index.html  package.json
web/src/: index.ts
